force-app/main/default/objects/PNR_Accounting_Line_POE__c/PNR_Accounting_Line_POE__c.object-meta.xml
<CustomObject>
    <label>PNR Accounting Line</label>
    <nameField>
        <displayFormat>PAL-{000000000}</displayFormat>
        <label>PNR Accounting Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PNR Accounting Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>