force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/Actual_Original_Ticket_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Original_Ticket_Cost__c</fullName>
    <label>Actual Original Ticket Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>