force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/Actual_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Refund_Date__c</fullName>
    <label>Actual Refund Date</label>
    <type>Date</type>
</CustomField>