force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/Actual_Total_Reissue_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Reissue_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Total Reissue Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>