force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/Airline_Change_Fee__c.field-meta.xml
<CustomField>
    <fullName>Airline_Change_Fee__c</fullName>
    <label>Airline Change Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>