force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/airline_designator__c.field-meta.xml
<CustomField>
    <fullName>airline_designator__c</fullName>
    <label>Airline Designator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>