force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/cash_tax__c.field-meta.xml
<CustomField>
    <fullName>cash_tax__c</fullName>
    <label>Cash Tax</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>