force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/commission_amount__c.field-meta.xml
<CustomField>
    <fullName>commission_amount__c</fullName>
    <label>Commission Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>