force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/consolidated_amount_due__c.field-meta.xml
<CustomField>
    <fullName>consolidated_amount_due__c</fullName>
    <label>Consolidated Amount Due</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>