force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/consolidated_commission_rate__c.field-meta.xml
<CustomField>
    <fullName>consolidated_commission_rate__c</fullName>
    <inlineHelpText>Percentage</inlineHelpText>
    <label>Consolidated Commmission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>