force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/consolidated_reference__c.field-meta.xml
<CustomField>
    <fullName>consolidated_reference__c</fullName>
    <label>Consolidated Reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>