force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/consolidated_tax_commission_amount__c.field-meta.xml
<CustomField>
    <fullName>consolidated_tax_commission_amount__c</fullName>
    <label>Consolidated Tax Commission Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>