force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/form_of_payment_code__c.field-meta.xml
<CustomField>
    <fullName>form_of_payment_code__c</fullName>
    <label>Form Of Payment Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>