force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/gst_on_service_fee__c.field-meta.xml
<CustomField>
    <fullName>gst_on_service_fee__c</fullName>
    <label>GST on Service Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>