force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/index__c.field-meta.xml
<CustomField>
    <fullName>index__c</fullName>
    <label>Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>