force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/is_rollup_ready__c.field-meta.xml
<CustomField>
    <fullName>is_rollup_ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rollup Ready</label>
    <type>Checkbox</type>
</CustomField>