force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/issued__c.field-meta.xml
<CustomField>
    <fullName>issued__c</fullName>
    <label>Issued</label>
    <type>Date</type>
</CustomField>