force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/number_of_conjuncted_documents__c.field-meta.xml
<CustomField>
    <fullName>number_of_conjuncted_documents__c</fullName>
    <label>Number Of Conjuncted Documents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>