force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/number_of_coupons__c.field-meta.xml
<CustomField>
    <fullName>number_of_coupons__c</fullName>
    <label>Number of Coupons</label>
    <length>25</length>
    <type>Text</type>
</CustomField>