force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/Original_Amount_Ticketers__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount_Ticketers__c</fullName>
    <label>Original Amount (Ticketers)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>