force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/original_ticket_number__c.field-meta.xml
<CustomField>
    <fullName>original_ticket_number__c</fullName>
    <label>Original Ticket Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>