force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/passenger_name__c.field-meta.xml
<CustomField>
    <fullName>passenger_name__c</fullName>
    <label>Passenger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>