force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/PNR_Ref__c.field-meta.xml
<CustomField>
    <fullName>PNR_Ref__c</fullName>
    <formula>pnr__r.Name+&apos;-&apos;+ pnr__r.TAD_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PNR Ref</label>
    <type>Text</type>
</CustomField>