force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/Refund_Difference__c.field-meta.xml
<CustomField>
    <fullName>Refund_Difference__c</fullName>
    <formula>Original_Amount_Ticketers__c - Actual_Refund_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is calculating Original Amount (Ticketers) MINUS Actual Refund Amount</inlineHelpText>
    <label>Refund Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>