force-app/main/default/objects/PNR_Accounting_Line_POE__c/fields/Refund_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Submitted_Date__c</fullName>
    <label>Refund Submitted Date</label>
    <type>Date</type>
</CustomField>